--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "decorative-react",
-  "version": "0.1.1",
+  "version": "0.1.3",
   "repository": "https://github.com/kyr0/decorative-react",
   "description": "decorative-react.js is an ES7 micro-framework promoting @decorator pattern-driven app development using react.",
   "main": "index.js",
@@ -17,7 +17,13 @@
   "author": "Aron Homberg <info@aron-homberg.de> (http://www.aron-homberg.de/)",
   "license": "ISC",
   "devDependencies": {
-    "decorative": "^0.1.3",
+    "babel-core": "^6.1.4",
+    "babel-loader": "^6.1.0",
+    "babel-plugin-transform-decorators": "^6.1.4",
+    "babel-plugin-syntax-class-properties": "^6.1.4",
+    "babel-preset-es2015": "^6.1.4",
+    "babel-preset-stage-0": "^6.1.2",
+    "decorative": "^0.1.6",
     "grunt-webpack": "^1.0.11",
     "jss": "^3.0.0",
     "jss-camel-case": "^1.0.0",
@@ -27,5 +33,8 @@
     "react-jss": "^2.0.1",
     "webpack": "^1.12.4",
     "webpack-dev-server": "^1.12.1"
+  },
+  "dependencies": {
+    "decorative": "^0.1.6"
   }
 }
